@@ -1,19 +1,26 @@
 package com.jasonwjones.pbcs.client.impl;
 
+import com.jasonwjones.pbcs.api.v3.dataslices.DataSlice;
+import com.jasonwjones.pbcs.api.v3.dataslices.DimensionMembers;
+import com.jasonwjones.pbcs.api.v3.dataslices.ExportDataSlice;
+import com.jasonwjones.pbcs.api.v3.dataslices.GridDefinition;
 import com.jasonwjones.pbcs.client.*;
-import com.jasonwjones.pbcs.client.exceptions.PbcsClientException;
-import com.jasonwjones.pbcs.client.exceptions.PbcsNoSuchObjectException;
+import com.jasonwjones.pbcs.client.exceptions.*;
 import com.jasonwjones.pbcs.client.impl.grid.DataSliceGrid;
 import com.jasonwjones.pbcs.client.impl.membervisitors.AbstractMemberVisitor;
 import com.jasonwjones.pbcs.client.impl.membervisitors.SearchMemberVisitor;
 import com.jasonwjones.pbcs.client.impl.membervisitors.SearchRegexMemberVisitor;
 import com.jasonwjones.pbcs.client.impl.membervisitors.SearchWildMemberVisitor;
+import com.jasonwjones.pbcs.util.GridUtils;
+import com.jasonwjones.pbcs.util.PlanTypeWalker;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.nio.file.FileVisitResult;
 import java.util.*;
-import java.util.stream.Collectors;
+import java.util.concurrent.Callable;
+import java.util.concurrent.ExecutionException;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
 
 /**
  * A plan type implementation where the known dimensions are explicitly defined. Defining the list of explicit dimensions
@@ -23,19 +30,61 @@ import java.util.stream.Collectors;
  * <p>Hopefully someday the process of getting the dimensions for a plan will be better supported by the EPM Cloud REST
  * API but for now this lets us significantly enrich functionality.
  */
-public class PbcsExplicitDimensionsPlanTypeImpl extends PbcsPlanTypeImpl {
+public class PbcsExplicitDimensionsPlanTypeImpl extends PbcsPlanTypeImpl implements PbcsExplicitDimensionsPlanType {
 
     private static final Logger logger = LoggerFactory.getLogger(PbcsExplicitDimensionsPlanTypeImpl.class);
 
     private final List<PbcsDimension> explicitDimensions;
 
-    public PbcsExplicitDimensionsPlanTypeImpl(RestContext context, PbcsApplication application, String planType, List<String> explicitDimensions, MemberDimensionCache memberDimensionCache) {
-        super(context, application, planType, memberDimensionCache);
-        Objects.requireNonNull(explicitDimensions);
-        if (explicitDimensions.isEmpty()) throw new IllegalArgumentException("Explicit dimension list cannot be empty");
+    private final ExecutorService executorService;
+
+    PbcsExplicitDimensionsPlanTypeImpl(RestContext context, PbcsApplication application, PbcsApplication.PlanTypeConfiguration configuration) {
+        super(context, application, configuration);
+
+        List<String> dimensionNames = new ArrayList<>();
+
+        if (configuration.isQueryDimensions()) {
+            if (configuration.isQueryDimensions()) {
+                List<PbcsDimension> dimensions = application.getDimensions(configuration.getName());
+                for (PbcsDimension dimension : dimensions) {
+                    dimensionNames.add(dimension.getName());
+                }
+            }
+        } else {
+            if (configuration.getExplicitDimensions() == null || configuration.getExplicitDimensions().isEmpty()) throw new IllegalArgumentException("Explicit dimension list cannot be empty");
+            dimensionNames.addAll(configuration.getExplicitDimensions());
+        }
+
+        if (dimensionNames.isEmpty()) {
+            throw new IllegalArgumentException("Dimension name list cannot be empty: provide dimension names or enable query dimensions");
+        }
+
         this.explicitDimensions = new ArrayList<>();
-        for (int index = 0; index < explicitDimensions.size(); index++) {
-            this.explicitDimensions.add(new ExplicitDimension(explicitDimensions.get(index), index));
+
+        int dimNumber = 0;
+
+        for (String dimName : dimensionNames) {
+            PbcsMemberType type = configuration.isValidateDimensions() ?
+                    application.getMember(dimName, dimName).getType() :
+                    PbcsMemberType.UNKNOWN;
+            this.explicitDimensions.add(new ExplicitDimension(dimName, dimNumber++, type));
+        }
+
+        processAttributeDimensions(application, configuration, dimNumber);
+
+        logger.debug("{} will use {} thread(s) to perform member name/alias search", this, configuration.getMemberSearchThreads());
+        executorService = Executors.newFixedThreadPool(configuration.getMemberSearchThreads());
+    }
+
+    private void processAttributeDimensions(PbcsApplication application, PbcsApplication.PlanTypeConfiguration configuration, int dimNumber) {
+        // add in explicit attribute dimensions, if any
+        if (configuration.getExplicitAttributeDimensions() != null) {
+            for (String attribDimName : configuration.getExplicitAttributeDimensions()) {
+                PbcsMemberType type = configuration.isValidateDimensions() ?
+                        application.getMember(attribDimName, attribDimName).getType() :
+                        PbcsMemberType.ATTRIBUTE;
+                this.explicitDimensions.add(new ExplicitDimension(attribDimName, dimNumber++, type));
+            }
         }
     }
 
@@ -45,13 +94,20 @@ public class PbcsExplicitDimensionsPlanTypeImpl extends PbcsPlanTypeImpl {
     }
 
     @Override
+    public void validateDimensions() {
+        for (PbcsDimension explicitDimension : explicitDimensions) {
+            explicitDimension.getRoot();
+        }
+    }
+
+    @Override
     public PbcsDimension getDimension(String dimensionName) {
         for (PbcsDimension dimension : explicitDimensions) {
             if (dimension.getName().equals(dimensionName)) {
                 return dimension;
             }
         }
-        throw new IllegalArgumentException("No dimension " + dimensionName + " contained in dimension list");
+        throw new PbcsInvalidDimensionException(dimensionName);
     }
 
     @Override
@@ -60,52 +116,73 @@ public class PbcsExplicitDimensionsPlanTypeImpl extends PbcsPlanTypeImpl {
     }
 
     @Override
-    public PbcsMemberProperties getMemberOrAlias(String memberOrAliasName) {
-        // check for known dimension name for the member or alias in the member to dimension lookup cache
-        String possibleDimension = memberDimensionCache.getDimensionName(this, memberOrAliasName);
+    public PbcsMember getMemberOrAlias(String memberOrAliasName) {
+        Objects.requireNonNull(memberOrAliasName, "Must specify a member or alias name");
 
-        // we *assume* that the dimension in the lookup cache is valid, but leave ourselves some wiggle room just in the
-        // extremely unlikely case that it's somehow wrong (or outdated), and we need to perform the rest of the brute-force
-        // search anyway
-        List<PbcsDimension> dimensionsToSearch = explicitDimensions;
-        if (possibleDimension != null) {
-            dimensionsToSearch = new ArrayList<>(explicitDimensions);
-            for (int index = 0; index < dimensionsToSearch.size(); index++) {
-                PbcsDimension current = dimensionsToSearch.get(index);
-                if (current.getName().equals(possibleDimension)) {
-                    // move the presumed dimension to the top of the search order
-                    dimensionsToSearch.remove(index);
-                    dimensionsToSearch.add(0, current);
-                    break;
+        try {
+            PbcsMember member = memberResolver.getMember(this, memberOrAliasName);
+            if (member != null) {
+                return member;
+            } else {
+                logger.warn("Resolving {} from source", memberOrAliasName);
+                PbcsMember matchingMember = oneOffSearchInDimension(memberOrAliasName);
+                if (matchingMember != null) return matchingMember;
+
+                List<MemberSearchCallable> searchers;
+                if (getDimensionNames().contains(memberOrAliasName)) {
+                    // shortcut when the member being queried literally is a dimension
+                    PbcsDimension searchDimension = getDimension(memberOrAliasName);
+                    searchers = Collections.singletonList(new MemberSearchCallable(searchDimension, memberOrAliasName));
+                } else {
+                    // you can technically re-search a dimension, but that only happens when you have a bad cache
+                    searchers = explicitDimensions.stream()
+                            .map(dimension -> new MemberSearchCallable(dimension, memberOrAliasName))
+                            .toList();
+                }
+
+                try {
+                    member = executorService.invokeAny(searchers);
+                    logger.debug("Found member {} (via {}) in dimension {}", member.getName(), memberOrAliasName, member.getDimensionName());
+                    memberDimensionCache.setDimension(this, memberOrAliasName, member.getDimensionName());
+                    memberResolver.setMember(this, memberOrAliasName, member);
+                    return member;
+                } catch (InterruptedException e) {
+                    Thread.currentThread().interrupt();
+                } catch (ExecutionException e) {
+                    logger.warn("Unable to find member {}", memberOrAliasName);
                 }
             }
-        }
-
-        for (PbcsDimension dimension : dimensionsToSearch) {
-            logger.debug("Searching dimension {} for member/alias {}", dimension.getName(), memberOrAliasName);
-
-            Queue<PbcsMemberProperties> members = new ArrayDeque<>();
-            members.add(dimension.getRoot());
-
-            while (!members.isEmpty()) {
-                PbcsMemberProperties current = members.remove();
-                if (memberOrAliasName.equalsIgnoreCase(current.getName()) || memberOrAliasName.equalsIgnoreCase(current.getAlias())) {
-                    // this is technically unneeded if the dimension is the same as possibleDimension, but it will be
-                    // set here anyway in case the underlying cache mechanism needs a "hit" in order to update a TTL
-                    // or similar value
-                    memberDimensionCache.setDimension(this, memberOrAliasName, dimension.getName());
-                    return current;
-                }
-                members.addAll(current.getChildren());
-            }
+            memberResolver.addInvalidMember(this, memberOrAliasName);
+        } catch (PbcsKnownInvalidMemberException e) {
+            logger.debug("Encountered known invalid member: {}", e.getObjectName());
         }
         return null;
+    }
+
+    /**
+     * Check if the dimension for the member is already in the cache, and check it.
+     *
+     * @param memberOrAliasName the member or alias name to look for
+     * @return the member, if found, null otherwise
+     */
+    private PbcsMember oneOffSearchInDimension(String memberOrAliasName) {
+        String possibleDimension = memberDimensionCache.getDimensionName(this, memberOrAliasName);
+        if (possibleDimension != null) {
+            PbcsDimension dimension = getDimension(possibleDimension);
+            PbcsMember matchingMember = dimension.getRoot().searchForDescendant(memberOrAliasName);
+            if (matchingMember == null) {
+                logger.warn("Looking in cached dimension {} for {} but couldn't find it, cache is invalid", possibleDimension, memberOrAliasName);
+            }
+            return matchingMember;
+        } else {
+            return null;
+        }
     }
 
     protected List<String> getDimensionNames() {
         return explicitDimensions.stream()
                 .map(PbcsDimension::getName)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public boolean hasDimension(String dimensionName) {
@@ -126,11 +203,11 @@ public class PbcsExplicitDimensionsPlanTypeImpl extends PbcsPlanTypeImpl {
     }
 
     @Override
-    public PbcsMemberProperties getMember(String memberName) {
+    public PbcsMember getMember(String memberName) {
         // TODO: shortcut when member is a dimension name
         String dimensionName = findMemberDimensionFromCache(memberName);
         if (dimensionName == null) {
-            logger.debug("Member dimension cache does not contain entry for {}, will search explicitly dimensions {}", memberName, explicitDimensions);
+            logger.debug("Member dimension cache does not contain entry for {}, will search explicit dimensions {}", memberName, explicitDimensions);
             dimensionName = findMemberDimensionFromExplicit(memberName);
             if (dimensionName == null) {
                 throw new PbcsClientException("Unable to determine dimension for member " + memberName + " after searching explicit dimensions");
@@ -142,8 +219,8 @@ public class PbcsExplicitDimensionsPlanTypeImpl extends PbcsPlanTypeImpl {
     private String findMemberDimensionFromExplicit(String memberName) {
         for (PbcsDimension dimension : explicitDimensions) {
             try {
-                PbcsMemberProperties memberProperties = getMember(dimension.getName(), memberName);
-                if (memberProperties != null) {
+                PbcsMember member = getMember(dimension.getName(), memberName);
+                if (member != null) {
                     String dimensionName = dimension.getName();
                     memberDimensionCache.setDimension(this, memberName, dimensionName);
                     return dimensionName;
@@ -156,7 +233,7 @@ public class PbcsExplicitDimensionsPlanTypeImpl extends PbcsPlanTypeImpl {
     }
 
     @Override
-    public List<PbcsMemberProperties> searchMembers(MemberSearchQuery query) {
+    public List<PbcsMember> searchMembers(MemberSearchQuery query) {
         Set<String> searchDimensions = new HashSet<>();
 
         if (query.getDimensionName() != null) {
@@ -165,23 +242,20 @@ public class PbcsExplicitDimensionsPlanTypeImpl extends PbcsPlanTypeImpl {
             }
             searchDimensions.add(query.getDimensionName());
         } else {
-            searchDimensions.addAll(getDimensionNames());
+            if (hasDimension(query.getSearchTerm())) {
+                // shortcut for when you're searching without a wildcard and the search term happens to be one of the
+                // dimensions
+                searchDimensions.add(query.getSearchTerm());
+            } else {
+                searchDimensions.addAll(getDimensionNames());
+            }
         }
 
-        AbstractMemberVisitor memberVisitor;
-        switch (query.getType()) {
-            case REGEX:
-                memberVisitor = new SearchRegexMemberVisitor(query.getSearchTerm());
-                break;
-            case SEARCH_WILD:
-                memberVisitor = new SearchWildMemberVisitor(query.getSearchTerm());
-                break;
-            case SEARCH:
-                memberVisitor = new SearchMemberVisitor(query.getSearchTerm());
-                break;
-            default:
-                throw new IllegalArgumentException("Unknown search type: " + query.getType());
-        }
+        AbstractMemberVisitor memberVisitor = switch (query.getType()) {
+            case REGEX -> new SearchRegexMemberVisitor(query);
+            case SEARCH_WILD -> new SearchWildMemberVisitor(query);
+            case SEARCH -> new SearchMemberVisitor(query);
+        };
 
         logger.info("Searching {}.{} in dimension(s) {} using search query {}", getApplication().getName(), getName(), searchDimensions, query);
         for (String searchDimension : searchDimensions) {
@@ -192,7 +266,7 @@ public class PbcsExplicitDimensionsPlanTypeImpl extends PbcsPlanTypeImpl {
     }
 
     /**
-     * Walks the member tree for a given dimension and starting member (or all dimensions if none specified, and the
+     * Walks the member tree for a given dimension and starting member (or all dimensions if none specified), and the
      * root member of each dimension if a starting member isn't specified, calling the given member visitor for each
      * member node.
      *
@@ -200,30 +274,162 @@ public class PbcsExplicitDimensionsPlanTypeImpl extends PbcsPlanTypeImpl {
      * @param startingMember the starting member, or null if to use root of dimension
      * @param memberVisitor the member visitor to call
      */
-    public void walkDimension(String dimensionName, String startingMember, MemberVisitor memberVisitor) {
+    public void walkDimension(String dimensionName, String startingMember, PlanTypeWalker.Visitor memberVisitor) {
         PbcsDimension dimension = getDimension(dimensionName);
 
-        Queue<PbcsMemberProperties> members = new ArrayDeque<>();
+        Queue<PbcsMember> members = new ArrayDeque<>();
         members.add(startingMember == null ? dimension.getRoot() : dimension.getMember(startingMember));
 
         while (!members.isEmpty()) {
-            PbcsMemberProperties current = members.remove();
-            FileVisitResult result = memberVisitor.preVisitMember(current);
-            if (result == FileVisitResult.TERMINATE) break;
+            PbcsMember current = members.remove();
+            PlanTypeWalker.MemberVisitResult result = memberVisitor.visitMember(this, current);
+            if (result == PlanTypeWalker.MemberVisitResult.TERMINATE) break;
             members.addAll(current.getChildren());
         }
 
     }
 
-    private class ExplicitDimension implements PbcsDimension {
+    @Override
+    public DataSliceGrid retrieve(PovGrid<String> grid, RetrieveOptions retrieveOptions) {
+        // get the 'fulcrum' point in the grid
+        int firstRowWithCell = GridUtils.firstNonNullInColumn(grid, 0);
+        int firstColWithCell = GridUtils.firstNonNullInRow(grid, 0);
+        int lastNonNullCol = GridUtils.lastNonNullInRow(grid, 0);
+
+        List<DimensionMembers> top = new ArrayList<>();
+        List<String> topDims = retrieveOptions.isProvideDimensionHints() ?
+                resolveDimensions(GridUtils.col(grid, firstColWithCell,  0, firstRowWithCell)) :
+                null;
+
+        for (int col = firstColWithCell; col <= lastNonNullCol; col++) {
+            List<String> members = GridUtils.col(grid, col, 0, firstRowWithCell);
+            DimensionMembers dimensionMembers = new DimensionMembers(topDims, members);
+            top.add(dimensionMembers);
+        }
+
+        List<DimensionMembers> left = new ArrayList<>();
+        List<String> leftDims = retrieveOptions.isProvideDimensionHints() ?
+                resolveDimensions(GridUtils.row(grid, firstRowWithCell, 0, firstColWithCell)) :
+                null;
+
+        for (int row = firstRowWithCell; row < grid.getRows(); row++) {
+            List<String> members = GridUtils.row(grid, row, 0, firstColWithCell);
+            DimensionMembers dimensionMembers = new DimensionMembers(leftDims, members);
+            left.add(dimensionMembers);
+        }
+
+        GridDefinition gridDefinition = new GridDefinition(grid.getPov(), top, left);
+        gridDefinition.setSuppressMissingRows(retrieveOptions.isSuppressMissingRows());
+        gridDefinition.setSuppressMissingColumns(retrieveOptions.isSuppressMissingColumns());
+        ExportDataSlice exportDataSlice = new ExportDataSlice(gridDefinition);
+        exportDataSlice.setExportPlanningData(retrieveOptions.isExportPlanningData());
+
+        // todo: catch exception and provide custom with some analysis on potential causes of problem
+        try {
+            DataSlice slice = retrieveMultiple(exportDataSlice, retrieveOptions.getMaxCellsPerRetrieve());
+            return new DataSliceGrid(this, slice, leftDims.size());
+        } catch (Exception e) {
+            throw new PbcsDataExportException(grid, e);
+        }
+    }
+
+    private DataSlice retrieveMultiple(ExportDataSlice exportDataSlice, int maxCellsPerRetrieve) {
+        GridDefinition gridDefinition = exportDataSlice.getGridDefinition();
+
+        final int totalRequestedRows = gridDefinition.getRows().size();
+        final int numCellsPerRow = gridDefinition.getRows().get(0).getMembers().size() + gridDefinition.getColumns().size();
+        final int rowsPerRetrieve = maxCellsPerRetrieve / numCellsPerRow;
+        final int numPages = (int) Math.ceil((double) totalRequestedRows / rowsPerRetrieve);
+
+        logger.debug("Exporting {} data with {} max cells ({} rows) per retrieve, for {} pages", getQualifiedName(), maxCellsPerRetrieve, rowsPerRetrieve, numPages);
+
+        List<DimensionMembers> originalDimensionMembers = gridDefinition.getRows();
+        List<DataSlice> slices = new ArrayList<>();
+
+        for (int page = 0; page < numPages; page++) {
+            int fromIndex = page * rowsPerRetrieve;
+            int toIndex = fromIndex + rowsPerRetrieve;
+            List<DimensionMembers> pageRows = originalDimensionMembers.subList(fromIndex, Math.min(toIndex, originalDimensionMembers.size()));
+            gridDefinition.setRows(pageRows);
+            logger.debug("Exporting {} data {} ({}/{})", getQualifiedName(), exportDataSlice, page + 1, numPages);
+            DataSlice slice = post("applications/{application}/plantypes/{planType}/exportdataslice", exportDataSlice, DataSlice.class, getApplication().getName(), getName());
+            logger.debug("Returned {}: {}", getQualifiedName(), slice);
+            slices.add(slice);
+        }
+
+        DataSlice primarySlice = slices.get(0);
+        for (int sliceIndex = 1; sliceIndex < slices.size(); sliceIndex++) {
+            DataSlice slice = slices.get(sliceIndex);
+            primarySlice.getRows().addAll(slice.getRows());
+        }
+        return primarySlice;
+    }
+
+    @Override
+    public void cache() {
+        logger.info("Caching outline for {}, dimensions: {}", getName(), getDimensionNames());
+        CachingMemberResolverVisitor visitor = new CachingMemberResolverVisitor();
+
+        PlanTypeWalker.Options options = new PlanTypeWalker.Options();
+        PlanTypeWalker.walk(this, visitor, options);
+
+        logger.info("Finished walking outline for {}", getName());
+    }
+
+    private List<String> resolveDimensions(List<String> members) {
+        List<String> dimensions = new ArrayList<>();
+        for (String memberName : members) {
+            PbcsMember member = getMemberOrAlias(memberName);
+            if (member == null) {
+                throw new PbcsClientException("Unable to resolve member/dimension for " + memberName);
+            } else {
+                dimensions.add(member.getDimensionName());
+            }
+        }
+        return dimensions;
+    }
+
+    @Override
+    public PbcsPov createPov() {
+        List<PbcsMember> members = new ArrayList<>();
+        for (PbcsDimension dim : getRealDimensions()) {
+            members.add(dim.getRoot());
+        }
+        return new PbcsPovImpl(this, members);
+    }
+
+    @Override
+    public PbcsPov createPov(String... members) {
+        PbcsPov pov = createPov();
+        for (String member : members) {
+            pov = pov.member(member);
+        }
+        return pov;
+    }
+
+    private List<PbcsDimension> getRealDimensions() {
+        List<PbcsDimension> dimensions = new ArrayList<>();
+        for (PbcsDimension dim : getDimensions()) {
+            if (dim.getDimensionType() != PbcsMemberType.ATTRIBUTE) {
+                dimensions.add(dim);
+            }
+        }
+        return dimensions;
+    }
+
+    private class ExplicitDimension extends AbstractPbcsObject implements PbcsDimension {
 
         private final String name;
 
         private final int number;
 
-        private ExplicitDimension(String name, int number) {
+        private final PbcsMemberType type;
+
+        private ExplicitDimension(String name, int number, PbcsMemberType type) {
+            super(PbcsExplicitDimensionsPlanTypeImpl.this.context);
             this.name = name;
             this.number = number;
+            this.type = type;
         }
 
         @Override
@@ -232,13 +438,28 @@ public class PbcsExplicitDimensionsPlanTypeImpl extends PbcsPlanTypeImpl {
         }
 
         @Override
+        public PbcsObjectType getObjectType() {
+            return PbcsObjectType.DIMENSION;
+        }
+
+        @Override
         public int getNumber() {
             return number;
         }
 
         @Override
-        public PbcsMemberProperties getMember(String memberName) {
+        public PbcsMember getMember(String memberName) {
             return PbcsExplicitDimensionsPlanTypeImpl.this.getMember(name, memberName);
+        }
+
+        @Override
+        public PbcsMemberType getDimensionType() {
+            return type;
+        }
+
+        @Override
+        public PbcsApplication getParent() {
+            return getApplication();
         }
 
         @Override
@@ -257,6 +478,65 @@ public class PbcsExplicitDimensionsPlanTypeImpl extends PbcsPlanTypeImpl {
         @Override
         public String toString() {
             return name;
+        }
+
+    }
+
+    private static class MemberSearchCallable implements Callable<PbcsMember> {
+
+        private final PbcsDimension dimension;
+
+        private final String memberOrAliasName;
+
+        private MemberSearchCallable(PbcsDimension searchDimension, String memberOrAliasName) {
+            this.dimension = searchDimension;
+            this.memberOrAliasName = memberOrAliasName;
+        }
+
+        @Override
+        public PbcsMember call() {
+            logger.debug("Searching dimension {} for member/alias {}", dimension.getName(), memberOrAliasName);
+            PbcsMember rootMember = dimension.getRoot();
+
+            PbcsMember matchingMember = rootMember.searchForDescendant(memberOrAliasName);
+            if (matchingMember != null) {
+                return matchingMember;
+            } else {
+                throw new PbcsInvalidMemberException("Unable to find member or alias " + memberOrAliasName + " in dimension " + dimension.getName());
+            }
+        }
+
+    }
+
+    private class CachingMemberResolverVisitor extends PlanTypeWalker.AbstractVisitor implements PlanTypeWalker.Visitor {
+
+        private int numCached;
+
+        @Override
+        public void endPlan(PbcsPlanType plan) {
+            logger.info("Finished walking outline of {}, cached {} items", plan.getName(), numCached);
+        }
+
+        @Override
+        public PlanTypeWalker.MemberVisitResult startDimension(PbcsDimension dimension) {
+            logger.info("Starting dimension {}", dimension);
+            return PlanTypeWalker.MemberVisitResult.CONTINUE;
+        }
+
+        @Override
+        public void endDimension(PbcsDimension dimension) {
+            logger.info("Finished dimension {}", dimension);
+        }
+
+        @Override
+        public PlanTypeWalker.MemberVisitResult visitMember(PbcsPlanType planType, PbcsMember member) {
+            memberResolver.setMember(planType, member.getName(), member);
+            numCached++;
+            if (member.getAlias() != null && !member.getAlias().isEmpty() && !member.getName().equals(member.getAlias())) {
+                memberResolver.setMember(planType, member.getAlias(), member);
+                numCached++;
+            }
+            return PlanTypeWalker.MemberVisitResult.CONTINUE;
         }
 
     }
